CloudFormation Templates/sam-template-provisioned.yaml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31
Description: Rutastic WebApp deployment template - Provisioned capacity [for testing purposes]
Parameters:
  DBDevEndpointSourceCIDR:
    Type: String
    Description: CIDR de la red desde la que se permitirá el acceso al endpoint del desarrollador
  LambdaExecutionRoleArn:
    Type: String
    Description: ARN del rol asociado a las funciones Lambda
  RutasticAPIProductionStageName:
    Type: String
    Description: Nombre de la etapa en la que se desplegará RutasticAPI
  GitHubPersonalAccessToken:
    Type: String
    Description: Token de acceso personal de GitHub con acceso al repositorio de Rutastic
Globals:
  Function:
    Runtime: java11
    Architectures:
      - x86_64
    MemorySize: 256
    EphemeralStorage:
      Size: 512
    Timeout: 15
    Environment:
      Variables:
        DB_USER: !Sub '{{resolve:secretsmanager:${AuroraDBCluster.MasterUserSecret.SecretArn}:SecretString:username}}'
        DB_USER_PWD: !Sub '{{resolve:secretsmanager:${AuroraDBCluster.MasterUserSecret.SecretArn}:SecretString:password}}'
        READ_ENDPOINT: !GetAtt AuroraDBCluster.ReadEndpoint.Address
        WRITE_ENDPOINT: !GetAtt AuroraDBCluster.Endpoint.Address
        PORT: !GetAtt AuroraDBCluster.Endpoint.Port
        DB_SCHEMA: rutastic
        CORS_ALLOWED_ORIGINS: !Sub 'https://${AmplifyProductionBranch.BranchName}.${AmplifyHosting.DefaultDomain}'
    VpcConfig:
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3
      SecurityGroupIds:
        - !Ref DBSecurityGroupByEC2SG
    CodeUri: rutastic-api
Resources:
  PrivateVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.31.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: rutastic-infra

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PrivateVPC
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: 172.31.2.0/24
      MapPublicIpOnLaunch: false

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PrivateVPC
      AvailabilityZone: !Sub ${AWS::Region}b
      CidrBlock: 172.31.3.0/24
      MapPublicIpOnLaunch: false

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PrivateVPC
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: 172.31.4.0/24
      MapPublicIpOnLaunch: false

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PrivateVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref PrivateVPC
      InternetGatewayId: !Ref InternetGateway

  InternetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable

  RouteTableAssociationToSubnet1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref PrivateSubnet1

  RouteTableAssociationToSubnet2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref PrivateSubnet2

  RouteTableAssociationToSubnet3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref PrivateSubnet3

  SecretsManagerVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub com.amazonaws.${AWS::Region}.secretsmanager
      VpcId: !Ref PrivateVPC
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3
      VpcEndpointType: Interface
      SecurityGroupIds:
        - !Ref DBSecurityGroupByEC2SG
      PrivateDnsEnabled: true
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: "*"
            Action:
              - "secretsmanager:*"
            Resource:
              - "*"

  AuroraDBCluster:
    Type: AWS::RDS::DBCluster
    Properties:
      AvailabilityZones:
        - !Sub ${AWS::Region}a
        - !Sub ${AWS::Region}b
        - !Sub ${AWS::Region}c
      DatabaseName: rutastic
      DBClusterIdentifier: rutasticdb-cluster
      DBSubnetGroupName: !Ref DBSubnetGroup
      Engine: aurora-mysql
      EngineVersion: 8.0.mysql_aurora.3.02.0
      MasterUsername: master
      ManageMasterUserPassword: true
      MasterUserSecret:
        KmsKeyId: !Ref DBSecretEncryptionKey
      NetworkType: IPV4
      Port: 3306
      StorageEncrypted: true
      VpcSecurityGroupIds:
        - !Ref DBSecurityGroupByEC2SG

  DBSecretEncryptionKey:
    Type: AWS::KMS::Key
    Properties:
      Description: RutasticDB credentials secret encryption key
      KeyPolicy:
        Version: 2012-10-17
        Id: !Ref AWS::StackName
        Statement:
          - Sid: Allow administration of the key
            Effect: Allow
            Principal:
              AWS: !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:root'
            Action:
              - 'kms:*'
            Resource: '*'

  DBInstance1:
    Type: AWS::RDS::DBInstance
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}a
      DBClusterIdentifier: !Ref AuroraDBCluster
      DBInstanceClass: db.t3.medium
      DBInstanceIdentifier: rutasticdb-instance-1
      Engine: aurora-mysql
      PubliclyAccessible: true
      PromotionTier: 0

  DBInstance2:
    Type: AWS::RDS::DBInstance
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}b
      DBClusterIdentifier: !Ref AuroraDBCluster
      DBInstanceClass: db.t3.medium
      DBInstanceIdentifier: rutasticdb-instance-2
      Engine: aurora-mysql
      PubliclyAccessible: true
      PromotionTier: 1

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: rutasticdb-subnet-group
      DBSubnetGroupDescription: Created from CloudFormation template
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3

  DBSecurityGroupByEC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: RutasticDB-AuroraCluster-SG
      GroupDescription: Security group for RutasticDB resource
      VpcId: !Ref PrivateVPC
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1

  DBSecurityGroupByEC2SGIngressRuleAllowOwnGroup:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DBSecurityGroupByEC2SG
      SourceSecurityGroupId: !Ref DBSecurityGroupByEC2SG
      IpProtocol: -1

  DBSecurityGroupByEC2SGIngressRuleAllowDBTraffic:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DBSecurityGroupByEC2SG
      CidrIp: !Ref DBDevEndpointSourceCIDR
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306

  CognitoUserPool:
    Type: AWS::Cognito::UserPool
    Properties:
      UserPoolName: RutasticUserPool
      Schema:
        - Name: email
          AttributeDataType: String
          Mutable: true
          Required: true
      Policies:
        PasswordPolicy:
          MinimumLength: 8
          RequireUppercase: true
          RequireLowercase: true
          RequireNumbers: true
          RequireSymbols: true
      UsernameConfiguration:
        CaseSensitive: false
      AdminCreateUserConfig:
        AllowAdminCreateUserOnly: false
      AutoVerifiedAttributes:
        - email
      EmailConfiguration:
        EmailSendingAccount: COGNITO_DEFAULT
      VerificationMessageTemplate:
        DefaultEmailOption: CONFIRM_WITH_CODE
        EmailSubject: '[Rutastic] Tu código de verificación'
        EmailMessage: 'Tu código de verificación para Rutastic es {####}'
      AccountRecoverySetting:
        RecoveryMechanisms:
          - Name: verified_email
            Priority: 1
      MfaConfiguration: 'OFF'

  CognitoUserPoolClient:
    Type: AWS::Cognito::UserPoolClient
    Properties:
      ClientName: Rutastic WebappSPA Client
      UserPoolId: !Ref CognitoUserPool
      GenerateSecret: false
      ReadAttributes:
        - email
        - email_verified
      WriteAttributes:
        - email
      ExplicitAuthFlows:
        - ALLOW_USER_SRP_AUTH
        - ALLOW_REFRESH_TOKEN_AUTH
      AccessTokenValidity: 60
      IdTokenValidity: 60
      RefreshTokenValidity: 30
      TokenValidityUnits:
        AccessToken: minutes
        IdToken: minutes
        RefreshToken: days
      PreventUserExistenceErrors: ENABLED

  ApiGatewayRestApi:
    Type: AWS::Serverless::Api
    Properties:
      Name: RutasticAPI
      StageName: !Ref RutasticAPIProductionStageName
      EndpointConfiguration:
        Type: REGIONAL
      Auth:
        Authorizers:
          CognitoAuthorizer:
            UserPoolArn: !GetAtt CognitoUserPool.Arn
            Identity:
              Header: Auth
        DefaultAuthorizer: CognitoAuthorizer
        AddDefaultAuthorizerToCorsPreflight: false
      Cors:
        AllowOrigin: "'*'"
        AllowHeaders: "'Content-Type,Authorization,Auth,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
        AllowMethods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"

  LambdaRouteCategoriesGET:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-routecategories-get
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.routeCategories.RouteCategoriesGET
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: GET
            Path: /categoriasruta
            Auth:
              Authorizer: NONE

  LambdaUsersGET:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-users-get
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.users.UsersGET
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: GET
            Path: /usuarios
            Auth:
              Authorizer: NONE

  LambdaUsersPOST:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-users-post
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.users.UsersPOST
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: POST
            Path: /usuarios
            Auth:
              Authorizer: NONE

  LambdaUserProxyDELETE:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-user-proxy-delete
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.users.UserProxyDELETE
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: DELETE
            Path: /usuarios/{proxy+}

  LambdaKudoEntriesUserProxyGET:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-kudoentries-user-proxy-get
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.kudoEntries.KudoEntriesUserProxyGET
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: GET
            Path: /kudos/{proxy+}

  LambdaRouteProxyGET:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-route-proxy-get
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.routes.RouteProxyGET
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: GET
            Path: /rutas/{proxy+}
            Auth:
              Authorizer: NONE

  LambdaRouteFilterGET:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-route-filter-get
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.routes.RouteFilterGET
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: GET
            Path: /rutas/filtro
            Auth:
              Authorizer: NONE

  LambdaRouteStatisticsGET:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-route-statistics-get
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.routes.RouteStatisticsGET
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: GET
            Path: /rutas/estadisticas
            Auth:
              Authorizer: NONE

  LambdaRoutesPOST:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-routes-post
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.routes.RoutesPOST
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: POST
            Path: /rutas

  LambdaRouteProxyPUT:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-route-proxy-put
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.routes.RouteProxyPUT
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: PUT
            Path: /rutas/{proxy+}

  LambdaRouteProxyDELETE:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: rutastic-route-proxy-delete
      Role: !Ref LambdaExecutionRoleArn
      Handler: aws.lambda.handlers.routes.RouteProxyDELETE
      Events:
        Api:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGatewayRestApi
            Method: DELETE
            Path: /rutas/{proxy+}

  AmplifyHosting:
    Type: AWS::Amplify::App
    Properties:
      Name: RutasticSPA
      Platform: WEB
      AccessToken: !Ref GitHubPersonalAccessToken
      Repository: https://github.com/jgarciapft/Rutastic-Serverless
      CustomRules:
        - Source: '/<*>'
          Target: '/index.html'
          Status: '404-200'

  AmplifyProductionBranch:
    Type: AWS::Amplify::Branch
    Properties:
      AppId: !GetAtt AmplifyHosting.AppId
      BranchName: main
      EnableAutoBuild: true
      Framework: WEBPACK
      Stage: PRODUCTION
Outputs:
  AuroraClusterSecretArn:
    Value: !GetAtt AuroraDBCluster.MasterUserSecret.SecretArn
  AuroraClusterEndpoint:
    Value: !GetAtt AuroraDBCluster.Endpoint.Address
  AuroraClusterReadEndpoint:
    Value: !GetAtt AuroraDBCluster.ReadEndpoint.Address
  CognitoUserPoolId:
    Value: !Ref CognitoUserPool
  CognitoUserPoolClientId:
    Value: !Ref CognitoUserPoolClient
  RutasticAPIProductionEndpoint:
    Value: !Sub "https://${ApiGatewayRestApi}.execute-api.${AWS::Region}.amazonaws.com/${RutasticAPIProductionStageName}"
  ProductionURL:
    Value: !Sub 'https://${AmplifyProductionBranch.BranchName}.${AmplifyHosting.DefaultDomain}'
